--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,9 +1,9 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
+  name        : "Chunyuan Li"
+  uri         : "http://chunyuan.li"
+  email       : "cl319@duke.edu"
   bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
