--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Chunyuan Li"
+  name             : 
   avatar           : "profile.png"
   bio              : "PhD at Duke University"
   location         : "Durham, NC"
@@ -92,12 +92,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/ChunyuanLI"
+  github           : "ChunyuanLI"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           : 
-  linkedin         : "https://www.linkedin.com/in/chunyuan-li-039b6a44/"
+  linkedin         : "chunyuan-li-039b6a44/"
   orcid            : 
   pinterest        :
   soundcloud       :
