--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ Name Name:
   uri         : "http://chunyuan.li"
   email       : "cl319@duke.edu"
   bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "chunyuan_id_photo.JPG"
   twitter     : "name"
   google_plus : "Name"
 
