--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,10 +4,10 @@ Name Name:
   name        : "Chunyuan Li"
   uri         : "http://chunyuan.li"
   email       : "cl319@duke.edu"
-  bio         : "This is the first name."
+  bio         : 
   avatar      : "chunyuan_id_photo.JPG"
-  twitter     : "name"
-  google_plus : "Name"
+  twitter     : 
+  google_plus : 
 
 Name2 Name2:
   name        : "Name2 Name2"
