--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Chunyuan Li"
 title_separator          : "-"
 name                     : &name "Chunyuan Li"
 description              : &description "personal description"
-url                      : ChunyuanLI.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "ChunyuanLI.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ChunyuanLI/ChunyuanLI.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
