--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ title                    : "Chunyuan Li"
 title_separator          : "-"
 name                     : &name "Chunyuan Li"
 description              : &description "personal description"
-url                      : "ChunyuanLI.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : https://ChunyuanLI.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ChunyuanLI/ChunyuanLI.github.io"
-teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
